# High-Performance-Computing-236606

./: .gitignore  .gitmodules  res
Final-Project-Report/: hardware.tex  (+7 more)
Homework_1/: CMakeLists.txt  Untitled.ipynb  check_specifications.sh  check_specifications.sh.o2069978  check_specifications.sh.o2069979  index.html  q  results_summery.txt  run_hw1.ipynb  submission_certificate_webcourse.txt  wb.c
Homework_1/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  run_hw1-checkpoint.ipynb  run_serial.sh-checkpoint.e1982645
Homework_1/problem3/: mandel_parallel_atomic.c  mandel_parallel_critical.c  mandel_parallel_false_sharing.c  mandel_parallel_padding.c  mandel_parallel_reduction.c  run_parallel_atomic.sh  run_parallel_atomic.sh.o2069982  run_parallel_critical.sh  run_parallel_false_sharing.sh  run_parallel_reduction.sh  run_serial.sh  run_serial.sh.o2069980
Homework_1/problem3/.ipynb_checkpoints/: mandel_parallel_critical-checkpoint.c  mandel_parallel_reduction-checkpoint.c  mandel_serial-checkpoint.c  run_parallel_critical-checkpoint.sh  run_parallel_critical.sh-checkpoint.o2036720  run_parallel_padding-checkpoint.sh  run_parallel_reduction-checkpoint.sh  run_serial.sh-checkpoint.o2036715
Homework_1/problem5/: prime_parallel_schedule.c  results.txt  run_serial.sh
Homework_1/problem5/.ipynb_checkpoints/: prime_parallel_schedule-checkpoint.c  run_parallel_schedule-checkpoint.sh
Homework_1/submission/: run_hw1.ipynb
Homework_1/submission/problem3/: mandel_parallel_false_sharing.c
Homework_1/submission/problem5/: prime_count_serial.c  prime_parallel_schedule.c
(+117 files in other folders)
