cmake_minimum_required(VERSION 3.0.0)
project(opmp VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(problem3_fs problem3/mandel_parallel_false_sharing.c)
add_executable(problem3_pad problem3/mandel_parallel_padding.c)
add_executable(wb wb.c)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
